cmake_minimum_required(VERSION 3.31)
project(2655389)

set(CMAKE_CXX_STANDARD 23)

add_executable(2655389 main.cpp
        shoppingCenter.h
        Business.h
        Employee.h
        Employee.cpp
        Business.cpp
        Restaurant.h
        Restaurant.cpp
        Shop.h
        Shop.cpp
        shoppingCentre.cpp)
